<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tmbs.academia_jedi.aulas.ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_activity"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_intent"
        android:background="@color/dark_yellow"
        android:id="@+id/button_intent"
        android:layout_above="@+id/button_dialog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:targetApi="ice_cream_sandwich" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_dialog"
        android:background="@color/dark_red"
        android:id="@+id/button_dialog"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_fragment"
        android:background="@android:color/white"
        android:onClick="onClickFragmentAndTab"
        android:id="@+id/button_fragments_and_tabs"
        android:layout_below="@+id/button_dialog"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/label_button_listView"
        android:id="@+id/button_listview"
        android:layout_below="@+id/button_fragments_and_tabs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:targetApi="ice_cream_sandwich" />

    <Button
        android:layout_width="wrap_content"
        android:background="@color/dark_green"
        android:layout_height="wrap_content"
        android:text="@string/label_button_lifecycle"
        android:id="@+id/button_life_cycle"
        android:layout_above="@+id/button_intent"
        android:layout_alignRight="@+id/button_intent"
        android:layout_alignEnd="@+id/button_intent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_red"
        android:text="@string/label_button_searchView"
        android:id="@+id/button_searchView_example"
        android:layout_below="@+id/button_listview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button_listview"
        android:layout_alignEnd="@+id/button_listview" />
</RelativeLayout>
